# EasyLink

./: README.md  bun.lockb  package.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: install_rust.sh  release.yml  win7.ps1
src/: App.vue  auto-imports.d.ts  components.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  constants.rs  main.rs  util.rs  utils.rs
src/components/: Footer.vue
src/components/config/: index.vue
src/composables/: errors.ts
src/layouts/: default.vue
src/modules/: dev.ts  i18n.ts  naive.ts  pinia.ts
src/pages/: index.vue
src/stores/: app.ts
