[package]
name = "easy-link"
version = "0.0.0"
description = "easy to p2p link"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1.20"
dashmap = "6.1.0"

easytier = { git = "https://github.com/EasyTier/EasyTier.git", tag = "v2.2.2" }


[target.'cfg(windows)'.dependencies]
encoding_rs = { version = "0.8.35", features = ["fast-gb-hanzi-encode"] }
