[package]
name = "easy-link"
version = "0.0.0"
description = "easy to p2p link"
authors = ["m1m1sha"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

once_cell = "1.20"
dashmap = "6.1.0"
git-version = "0.3.9"
anyhow = "1"

easytier = { git = "https://github.com/EasyTier/EasyTier.git", tag = "v2.2.2" }
tauri-plugin-process = "2"


[target.'cfg(windows)'.dependencies]
encoding_rs = { version = "0.8.35", features = ["fast-gb-hanzi-encode"] }
planif = { git = "https://github.com/mattrobineau/planif", tag = "1.0.1" }
windows = { version = "0.59.0", features = [
  "Win32_System_TaskScheduler",
  "Win32_System_Variant",
  "Win32_System_Power",
  "Win32_System_Com",
  "Win32_System_Ole",
  "Win32_NetworkManagement_IpHelper",
  "Win32_NetworkManagement_Ndis",
  "Win32_Networking_WinSock",
] }
whoami = "1.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
